# rust-sample-bot

./: .gitignore  .sample.env  Cargo.toml  README.md
src/: admin.rs  main.rs
