[package]
name = "rust-tgbot"
version = "0.1.0"
authors = ["ATechnoHazard <amolele@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A telegram bot to manage your groups with ease."
keywords = ["telegram", "bot"]
repository = "https://github.com/ATechnoHazard/rust-tgbot"
homepage = "https://github.com/ATechnoHazard/rust-tgbot"
readme = "README.md"

[dependencies]
teloxide = "0.2.0"
futures = "0.3.4"
tokio = "0.2.13"
log = "0.4.8"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
